# scribe

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  sonar-project.properties
.github/workflows/: build.yml  ci.yml  release.yml
crates/scribe/: Cargo.toml
crates/scribe-cli/: Cargo.toml
crates/scribe-cli/src/: main.rs
crates/scribe-core/: Cargo.toml
crates/scribe-core/src/: lib.rs  logging.rs  process_recording.rs  process_session.rs
crates/scribe-core/src/audio/: audio_recording_event.rs  cpal_recorder.rs  create_session_dir.rs  latest_session.rs  list_sessions.rs  mix_buffer.rs  mod.rs  record_loopback.rs  recorder.rs  recorder_factory.rs  samples.rs  session_entry.rs  session_status.rs  session_store.rs  session_store_factory.rs
crates/scribe-core/src/config/: default_config.rs  load_or_create.rs  managed_model.rs  mod.rs  model_download_event.rs  output_dir.rs  paths.rs  persistence.rs  settings.rs  validate_setup.rs
crates/scribe-core/src/notes/: chat_request.rs  chat_response.rs  generate.rs  generator.rs  message.rs  mod.rs  open_router.rs
crates/scribe-core/src/runtime/: active_recording.rs  artifact_store.rs  clock.rs  events.rs  mod.rs  scribe_runtime.rs
crates/scribe-core/src/transcribe/: backend.rs  embedded_whisper.rs  mod.rs  provider.rs  provider_factory.rs  resample.rs  run_whisper.rs  wav_loader.rs  whisper_cli.rs
crates/scribe-core/tests/: runtime.rs
crates/scribe-tui/: Cargo.toml
crates/scribe-tui/src/: main.rs  playback.rs  session_store.rs
crates/scribe-tui/src/utils/: config.rs  sessions.rs
crates/scribe/src/: lib.rs  main.rs  opener.rs  tray.rs
crates/scribe/src/config/: mod.rs
src/: main.rs  tray.rs  tui.rs
src/audio/: mod.rs
src/config/: mod.rs
src/notes/: mod.rs
src/transcribe/: mod.rs
