[workspace]
members = ["crates/scribe", "crates/scribe-cli", "crates/scribe-tui"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Local meeting transcription and note generation"

[workspace.dependencies]
scribe = { path = "crates/scribe" }
scribe-cli = { path = "crates/scribe-cli" }
scribe-tui = { path = "crates/scribe-tui" }
anyhow = { version = "=1.0.102" }
tokio = { version = "=1.52.3", features = ["full"] }