[workspace]
members = [
    "crates/scribe",
    "crates/scribe-cli",
    "crates/scribe-core",
    "crates/scribe-tui",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.94.0"
description = "Local meeting transcription and note generation"

[workspace.dependencies]
scribe-core = { path = "crates/scribe-core", default-features = false }
anyhow = { version = "=1.0.102" }
tokio = { version = "=1.52.3", features = ["full"] }
tracing = { version = "=0.1.41" }
