[package]
name = "scribe-cli"
version.workspace = true
edition.workspace = true
description.workspace = true

[features]
default = ["scribe-core/default"]
whisper-cli = ["scribe-core/whisper-cli"]

[dependencies]
anyhow = { workspace = true }
scribe-core = { workspace = true, default-features = false }
tokio = { workspace = true }
tracing = { workspace = true }
