[package]
name = "scribe-tui"
version.workspace = true
edition.workspace = true
description.workspace = true

[features]
default = []
tui = ["dep:crossterm", "dep:ratatui", "scribe-core/tui"]
embedded-whisper = ["scribe-core/embedded-whisper"]
auto-download-whisper-model = ["scribe-core/auto-download-whisper-model"]

[[bin]]
name = "scribe-tui"
path = "src/main.rs"
required-features = ["tui"]

[dependencies]
anyhow = { workspace = true }
chrono = "=0.4.44"
crossterm = { version = "=0.29.0", optional = true }
ratatui = { version = "=0.30.0", optional = true }
scribe-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
