[package]
name = "scribe-tui"
version.workspace = true
edition.workspace = true
description.workspace = true

[features]
default = ["scribe-core/default"]
tui = ["dep:crossterm", "dep:ratatui", "scribe-core/tui"]
whisper-cli = ["scribe-core/whisper-cli"]

[[bin]]
name = "scribe-tui"
path = "src/main.rs"
required-features = ["tui"]

[dependencies]
anyhow = { workspace = true }
chrono = "=0.4.44"
crossterm = { version = "=0.29.0", optional = true }
ratatui = { version = "=0.30.0", optional = true }
scribe-core = { workspace = true, default-features = false }
tokio = { workspace = true }
tracing = { workspace = true }
